--- a/index.html
+++ b/index.html
@@ -2048,7 +2048,7 @@ h1, h2, h3, h4, h5{font-family: 'cinzel';}
             </div>
             
             <div class="carrusel-baner" id="carrusel-baner">
-                <div class="img-baner" style="background-image: url(/PAGINA-HOTEL-SPA/images/baner-hotel.jpg);">
+                <div class="img-baner" style="background-image: url(https://images.pexels.com/photos/338504/pexels-photo-338504.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
                     <div>1</div>
                 </div>
                 <div class="img-baner" style="background-image: url(/PAGINA-HOTEL-SPA/images/lobby-1.jpg);">
