--- a/public/index.html
+++ b/public/index.html
@@ -1941,7 +1941,7 @@ h1, h2, h3, h4, h5{font-family: 'cinzel';}
         <div class="cont-header-1">
             <div class="cont-logo">
                 <a href=""><img class="logo" src="/PAGINA-HOTEL-SPA/images/LOGO-HOTEL-FINAL.png" alt="" width="50px"></a>
-                <a href="" style="text-decoration: none;"><h2>Warriot</h2></a>
+                <a href="" style="text-decoration: none;"><h2>Warriot hotel</h2></a>
             </div>
             
             <nav class="nav navegacion">
